@@ -3,38 +3,30 @@ package com.dcode.order_service.service.impl;
 import com.dcode.order_service.dto.order.request.OrderLineRequest;
 import com.dcode.order_service.dto.order.response.OrderLineResponse;
 import com.dcode.order_service.repository.IOrderLineRepository;
+import com.dcode.order_service.repository.IOrderRepository;
 import com.dcode.order_service.service.IOrderLineService;
 import com.dcode.order_service.utils.OrderUtils;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static com.dcode.order_service.utils.OrderUtils.createNewOrderLineEntity;
-import static com.dcode.order_service.utils.OrderUtils.fromOrderLineEntity;
 
 @Service
 @RequiredArgsConstructor
-@Slf4j
-@Transactional
 public class OrderLineServiceImpl implements IOrderLineService {
 
-    private final IOrderLineRepository repository;
+    private final IOrderLineRepository orderRepository;
 
-    public List<OrderLineResponse> findAllByOrderId(String orderId) {
-        return repository.findAllByOrderId(orderId)
-                .stream()
+    @Override
+    public void saveOrderLine(OrderLineRequest request) {
+        var order = OrderUtils.toOrderLineEntity(request);
+        orderRepository.save(order);
+    }
+
+    @Override
+    public List<OrderLineResponse> findAllByOrderId(Long orderId) {
+        return  orderRepository.findAllByOrderEntityId(orderId).stream()
                 .map(OrderUtils::fromOrderLineEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    public Long saveOrderLine(OrderLineRequest request) {
-        var order = createNewOrderLineEntity(request);
-        return repository.save(order).getId();
-    }
-
-
 }
